--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -10,12 +10,13 @@
                 }
             </style>
             <h1>
+                <p><a name="down"></a></p>
                 <p class="fig"><img src="{% static '/images/number_2.png' %}" width="1000" height="300" alt="number"></a></p>
             </h1>
             <div class="grid_12">
                 <div class="border1"></div>
                 <div class="copy">
-                    <a class="link6" href="/">Animal feeds Ulan-Ude.</a>
+                    <a class="link6" href="/">Корма для животных Улан-Удэ</a>
                     <span>&nbsp;&copy;&nbsp;</span>
                     <span id="copyright-year"></span>&nbsp;
                 </div>
