--- a/templates/index-1.html
+++ b/templates/index-1.html
@@ -18,54 +18,40 @@
             <div class="grid_8">
                 <h2>В продаже:</h2>
                 <section class="section">
-                    <div class="image1"><img src="{% static '/images/page2_img1.jpg' %}"  alt=""></div>
-                    <a href="#" class="link2">Wildlife &nbsp;Feeds</a>
-                    <p>Laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non.</p>
-                    <a href="#" class="link">read more</a>
+                    <div class="image1"><img src="{% static '/images/cow_feed_1.jpg' %}" width="400" height="250" alt=""></div>
+                    <a href="#" class="link2">Корм &nbsp;для КРС</a>
+                    <p>Стоимость и количество в наличии уточняйте по телефону</p>
+                    <a href="#down" class="link">number</a>
                 </section>
                 <section class="section">
-                    <div class="image1"><img src="{% static '/images/page2_img2.jpg' %}" alt=""></div>
-                    <a href="#" class="link2">Small &nbsp;Animals</a>
-                    <p>Laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem.</p><br>
-                    <p>Quia voluptas sit aspernatur aut odit aut fugit, sedume quia consequuntur magni dolores eosume qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
-                    <a href="#" class="link">read more</a>
+                    <div class="image1"><img src="{% static '/images/pig_feed_1.png' %}" width="400" height="250" alt=""></div>
+                    <a href="#" class="link2">Корм &nbsp;для свиней</a>
+                    <p>Стоимость и количество в наличии уточняйте по телефону</p><br>
+                    <p></p>
+                    <a href="#down" class="link">number</a>
                 </section>
                 <section class="section">
-                    <div class="image1"><img src="{% static '/images/page2_img3.jpg' %}" alt=""></div>
-                    <a href="#" class="link2">Horse &nbsp;Feeds</a>
-                    <p>Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p><br>
-                    <p>Sequi nesciunt neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    <a href="#" class="link">read more</a>
+                    <div class="image1"><img src="{% static '/images/horse_feed.jpg' %}" width="400" height="250" alt=""></div>
+                    <a href="#" class="link2">Корм &nbsp;для лошадей</a>
+                    <p>Стоимость и количество в наличии уточняйте по телефону</p><br>
+                    <p></p>
+                    <a href="#down" class="link">number</a>
                 </section>
                 <section class="section">
-                    <div class="image1"><img src="{% static '/images/page2_img4.jpg' %}" alt=""></div>
-                    <a href="#" class="link2">Cattle &nbsp;Feeds</a>
-                    <p>Laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae.</p><br>
-                    <p>Quia voluptas sit aspernatur aut odit aut fugit, sedume quia consequuntur magni dolores eosume qui ratione voluptatem sequi nesciunt neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci.</p>
-                    <a href="#" class="link">read more</a>
-                </section>
-                <section class="section">
-                    <div class="image1"><img src="{% static '/images/page2_img5.jpg' %}" alt=""></div>
-                    <a href="#" class="link2">Pets &nbsp;& &nbsp;Supplies</a>
-                    <p>Laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non.</p>
-                    <a href="#" class="link">read more</a>
-                </section>            
+                    <<div class="image1"><img src="{% static '/images/dog_feed.jpg' %}" width="400" height="250" alt=""></div>
+                    <a href="#" class="link2">Корм &nbsp;для других животных</a>
+                    <p>Стоимость и количество в наличии уточняйте по телефону</p><br>
+                    <p></p>
+                    <a href="#down" class="link">number</a>
+                </section>           
             </div>
             <div class="grid_4">
-                <h2>Feed Navigation</h2>
+                <h2>Навигация</h2>
                 <ul class="list p16">
-                    <li><a href="#"><i class="fa fa-circle"></i>Livestock</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Pets & Supplies</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Horse Feeds</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Cattle Feeds</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Small Animals</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Show Feeds</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Wildlife Feeds</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Cattle Feeding Trials</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Mix 30 Liquid Feed</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Farm Animals</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Exotic Feed</a></li>
-                    <li><a href="#"><i class="fa fa-circle"></i>Animal Health</a></li>
+                    <li><a href="#"><i class="fa fa-circle"></i>Корм для КРС</a></li>
+                    <li><a href="#"><i class="fa fa-circle"></i>Корм для свиней</a></li>
+                    <li><a href="#"><i class="fa fa-circle"></i>Корм для лошадей</a></li>
+                    <li><a href="#"><i class="fa fa-circle"></i>Корм для других животных</a></li>
                 </ul>   
                 <div class="p50">
                 </div>     
