--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -29,7 +29,7 @@
      <script src="{% static '/js/camera.js' %}"></script>
      <script src="{% static '/js/tmStickUp.js' %}"></script>     
      <!--[if (gt IE 9)|!(IE)]><!-->
-     <script src=js/jquery.mobile.customized.min.js></script>
+     <!-- <script src=js/jquery.mobile.customized.min.js></script> -->
      <!--<![endif]-->
      <!--[if lt IE 8]>
         <link rel="stylesheet" type="text/css" media="screen" href="css/ie.css">
