--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
     <div class="container">
         <div class="row">     
             <div class="grid_4">
-                <h2>Наши корма</h2>
+                <h2>Ассортимент</h2>
                 <div class="box">
                     <div class="image">
-                        <img src="{% static '/images/page1_img1.jpg' %}" alt="">
+                        <img src="{% static '/images/cow_feed_1.jpg' %}" width="370" height="230" alt="">
                     </div>
                     <a href="/feeds/" class="link">view all</a>                    
                 </div>
@@ -26,21 +26,22 @@
                 <h2>Где мы находимся</h2>
                 <div class="box">
                     <div class="image">
-                        <img src="{% static '/images/page1_img2.jpg' %}" alt="">
+                        <img src="{% static '/images/kiosk.jpg' %}" width="370" height="230" alt="">
                     </div>
-                    <p></p><a href="#down" class="link">view all</a></p>                 
+                    <p></p><a href="#maps" class="link">view all</a></p>                 
                 </div>
             </div>
             <div class="grid_4">
                 <h2>Наши контакты</h2>
                 <div class="box">
                     <div class="image">
-                        <img src="{% static '/images/page1_img3.jpg' %}" alt="">
+                        <img src="{% static '/images/page1_img3.jpg' %}" width="370" height="230" alt="">
                     </div>
                     <a href="#down" class="link">view all</a>                    
                 </div>
             </div>
         </div>
+        <p><a name="maps"></a></p>
         <div class="divider"></div>
     </div>
 </div>
