--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,18 +102,18 @@ h1 a img {
 	font-weight: 400;
 	font-size: 13px;
 	line-height: 28px;
-	color: #379fb8;
+	color: #9e37b8;
 	letter-spacing: -.5px;
 	padding-left: 11px;
 }
 
-.tel .phone i {	color: #379fb8; padding: 0 2px 3px 0; }
+.tel .phone i {	color: #9e37b8; padding: 0 2px 3px 0; }
 
 .tel .phone + span {
 	height: 14px;
 	margin: 0 14px 0 10px;
 	display: inline-block;
-	border-right: 1px dotted #379fb8;
+	border-right: 1px dotted #9e37b8;
 }
 
 .tel a {color: #a0a0a0;}
@@ -202,7 +202,7 @@ h2,h3,h4 {
 }
 
 h2 {
-	color: #fd4403;
+	color: #df1616;
 	font-size: 36px;
 	line-height: 40px;
 	font-weight: 400;
