--- a/templates/index.html
+++ b/templates/index.html
@@ -12,32 +12,27 @@
 <div id="content">
 <div class="p50">
     <div class="container">
-        <div class="row">     
+        <div class="row">
             <div class="grid_4">
-                <h2>Ассортимент</h2>
+                <h2>АССОРТИМЕНТ</h2>
                 <div class="box">
                     <div class="image">
-                        <img src="{% static '/images/cow_feed_1.jpg' %}" width="370" height="230" alt="">
+                        <a href="/feeds/"><img src="{% static '/images/feed_krs_1.jpg' %}" width="370" height="230" alt="">
+                        </a>
                     </div>
                     <a href="/feeds/" class="link">view all</a>                    
                 </div>
             </div>
             <div class="grid_4">
-                <h2>Где мы находимся</h2>
-                <div class="box">
-                    <div class="image">
-                        <img src="{% static '/images/kiosk.jpg' %}" width="370" height="230" alt="">
-                    </div>
-                    <p></p><a href="#maps" class="link">view all</a></p>                 
-                </div>
             </div>
             <div class="grid_4">
-                <h2>Наши контакты</h2>
+                <h2>АДРЕС МАГАЗИНА</h2>
                 <div class="box">
                     <div class="image">
-                        <img src="{% static '/images/page1_img3.jpg' %}" width="370" height="230" alt="">
+                        <a href="#maps"><img src="{% static '/images/kiosk_1.jpg' %}" width="370" height="230" alt="">
+                        </a>
                     </div>
-                    <a href="#down" class="link">view all</a>                    
+                    <p></p><a href="#maps" class="link">view all</a></p>                 
                 </div>
             </div>
         </div>
@@ -46,7 +41,7 @@
     </div>
 </div>
     <div class="map">
-        <iframe class="wide_map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d46746.22914396349!2d107.63913517207729!3d51.796118694814666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sru!4v1667695770545!5m2!1sru!2sru" style="border:0"></iframe>
+        <iframe class="wide_map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8853.661037915172!2d107.52575338852505!3d51.736892226412905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sru!4v1668693119288!5m2!1sru!2sru" style="border:0"></iframe>
     </div>
     <p><a name="down"></a></p>
     <div class="divider"></div>          
